--- a/settings.conf
+++ b/settings.conf
@@ -1,6 +1,6 @@
 {
-    "version":  "4.3.3",
-    "path":  "u:",
+    "version":  "4.3.8",
+    "path":  "c:\\SCPM",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
@@ -12,5 +12,5 @@
     "sleep_seconds":  "30",
     "voice":  "yes",
     "stop_worker_delay":  "5",
-    "benchmark_time":  "5"
+    "benchmark_time":  "3"
 }
