added config examples

--- a/settings.conf
+++ b/settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "4.3.9",
-    "path":  "c:\\SCPM",
+    "path":  "C:\\PB_PRO",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
