added option to turn coin data off

--- a/settings.conf
+++ b/settings.conf
@@ -12,5 +12,6 @@
     "sleep_seconds":  "30",
     "voice":  "yes",
     "stop_worker_delay":  "5",
-    "benchmark_time":  "3"
+    "benchmark_time":  "3",
+    "enable_coin_data": "yes"
 }
