personal chaged to wallet

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 profit_manager_re-write.ps1
+Miner-XMRfest/libeay32.dll
+Miner-XMRfest/festival-miner.exe
+Miner-XMRfest/festival-miner-cuda-backend.dll
+Miner-XMRfest/festival-miner-opencl-backend.dll
+Miner-XMRfest/ssleay32.dll
