corrected missing currencies

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -23,7 +23,13 @@
                      "ELYA",
                      "LTHN",
 					 "MUTX",
-					 "INTU"
+					 "INTU",
+                     "RECL",
+                     "TUBE",
+                     "XAO",
+                     "SOLACE",
+                     "RYO",
+                     "FEST"
                  ],
     "mining_params":  [
                           {
