--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -153,7 +153,7 @@
                           },
                           {
                               "symbol":  "FEST",
-                              "software":  "xmr-stak-fest",
+                              "software":  "festival-miner",
                               "static_param":  "5",
                               "algo":  "festival",
                               "pool":  "80.211.166.244:5555",
