--- a/settings.conf
+++ b/settings.conf
@@ -13,6 +13,6 @@
     "voice":  "yes",
     "stop_worker_delay":  "5",
     "benchmark_time":  "3",
-    "enable_coin_data": "yes"
+    "enable_coin_data": "yes",
     "coin_data_age": "24hr"
 }
