--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -30,10 +30,21 @@
                      "FEST",
                      "XHV",
                      "LNS",
-                     "BLOC"
+                     "BLOC",
+		     "ARQ"
                  ],
     "mining_params":  [
                           {
+                              "symbol":  "ARQ",
+                              "software":  "xmr-stak",
+                              "static_param":  "1",
+                              "algo":  "cryptonight_lite_v7",
+                              "pool":  "mine.arqma.com:3333",
+                              "wallet":  "",
+                              "payment_id":"",
+                              "amd_config_file":  "amd_light.txt"
+                          },
+			  {
                               "symbol":  "BLOC",
                               "software":  "xmr-stak",
                               "static_param":  "5",
