--- a/settings.conf
+++ b/settings.conf
@@ -14,5 +14,8 @@
     "stop_worker_delay":  "5",
     "benchmark_time":  "3",
     "enable_coin_data": "yes",
-    "coin_data_age": "1hr"
+    "coin_data_age": "1hr",
+    "mine_cpu" : "yes",
+    "mine_amd" : "yes",
+    "mine_nvidia" : "yes"
 }
