added FRTY and NAZA back

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -34,7 +34,9 @@
                      "CCH",
                      "LMO",
                      "SUP",
-                     "FEST"
+                     "FEST",
+                     "NAZA",
+                     "FRTY"
                  ],
     "mining_params":  [
                           
