--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,7 @@
 {
     "version":  "5.0.0",
     "path":  "C:\\PB_PRO",
-    "static_mode":  "no",
+    "static_mode":  "yes",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
     "update_url":  "api.profitbotpro.com",
