changed symbol for TRI

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -37,12 +37,12 @@
                      "ETOS",
                      "ETNX",
                      "LMO",
-                     "TRIT"
+                     "XTRI"
                  ],
     "mining_params":  [
                           
                           {
-                              "symbol":  "TRIT",
+                              "symbol":  "XTRI",
                               "software":  "xmr-stak",
                               "static_param":  "2",
                               "algo":  "cryptonight_lite_v7",
