--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,7 @@
 {
-    "version":  "5.01.01",
-    "path":  "C:\\PB_PRO",
-    "static_mode":  "yes",
+    "version":  "5.02.00",
+    "path":  "C:\\Profitbot_Pro",
+    "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
     "update_url":  "api.profitbotpro.com",
