--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "5.02.00",
-    "default_coin":  "MOX",
+    "default_coin":  "MOX"
     "my_coins":  [
                      "ETNC",
                      "XTL",
