added xcash back

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -38,7 +38,8 @@
                      "MOX",
 					 "LOKI",
                      "XSF",
-                     "BTCN"
+                     "BTCN",
+					 "XCASH"
                  ],
     "mining_params":  [
                           {
