added xtri back in

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -40,7 +40,8 @@
                      "XSF",
                      "BTCN",
 					 "XCASH",
-                     "KSN"
+                     "KSN",
+                     "XTRI"
                  ],
     "mining_params":  [
                           {
