--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "5.02.01",
-    "default_coin":  "XARI",
+    "default_coin":  "BBS",
     "my_coins":  [
                      "ETNC",
                      "XTL",
