changed coins to mine

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "5.02.01",
-    "default_coin":  "MOX",
+    "default_coin":  "LMO",
     "my_coins":  [
                      "ETNC",
                      "XTL",
@@ -34,13 +34,11 @@
                      "B2N",
                      "ETOS",
                      "ETNX",
-                     "LMO",
                      "MOX",
 					 "LOKI",
                      "XSF",
                      "BTCN",
 					 "XCASH",
-                     "KSN",
                      "XTRI",
                      "NBR",
                      "XRN",
