--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -43,7 +43,8 @@
                      "NBR",
                      "XRN",
                      "XARI",
-                     "BBS"
+                     "BBS",
+                     "LMO"
                  ],
     "mining_params":  [
                           {
