--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "5.03.01",
-    "default_coin":  "XFH",
+    "default_coin":  "LMO",
     "my_coins":  [
                      "ETNC",
                      "XTL",
