--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "5.04.01",
-    "default_coin":  "LMO",
+    "default_coin":  "HOSP",
     "my_coins":  [
                      "ETNC",
                      "XTL",
