added FEST, changed ETNXP pool addr

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -2,7 +2,6 @@
     "version":  "5.04.01",
     "default_coin":  "XSF",
     "my_coins":  [
-                     "ETNC",
                      "XTL",
                      "XMR",
                      "GRFT",
@@ -48,6 +47,7 @@
                      "XFH",
                      "HOSP",
                      "LMO"
+                     "FEST"
                  ],
     "mining_params":  [
                           {
