fixed parse error

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -46,7 +46,7 @@
                      "ARMS",
                      "XFH",
                      "HOSP",
-                     "LMO"
+                     "LMO",
                      "FEST"
                  ],
     "mining_params":  [
