--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -46,8 +46,7 @@
                      "ARMS",
                      "XFH",
                      "HOSP",
-                     "LMO",
-                     "FEST"
+                     "LMO"
                  ],
     "mining_params":  [
                           {
