--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -1,6 +1,6 @@
 {
     "version":  "6.00.00",
-    "default_coin":  "MC",
+    "default_coin":  "CCX",
     "my_coins":  [
                      "XTL",
                      "XMR",
