updates for new release

--- a/settings.conf
+++ b/settings.conf
@@ -4,7 +4,7 @@
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
-    "update_url":  "api.profitbotpro.com",
+    "update_url":  "https://www.profitbotpro.com/api/v1/api.cfm?session_key=A0CF8D88-045B-D9D0-2B9EDB70822B4BB9&default_hashrate=15000&cryptonight_v8_hashrate=13500&cryptonight_cn7_lite_hashrate=30000&cryptonight_alloy_hashrate=7500&cryptonight_b2n_hashrate=19500&cryptonight_masari_hashrate=27000&cryptonight_heavy_hashrate=10500&cryptonight_arto_hashrate=13500&cryptonight_mox_hashrate=31500&cryptonight_freehaven_hashrate=36000&algo_select=Any&exchange_select=Any&listing_select=Listed&asic=any&db_select=Currents",
     "enable_logging":  "yes",
     "log_age":  "7",
     "delete_cpu_txt":  "no",
