added ability to name rig

--- a/settings.conf
+++ b/settings.conf
@@ -1,6 +1,7 @@
 {
-    "version":  "6.02.02",
+    "version":  "6.03.00",
     "path":  "C:\\Profitbot_Pro",
+    "rig_name": "",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
