added volume param

--- a/settings.conf
+++ b/settings.conf
@@ -5,7 +5,7 @@
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
-    "update_url":  "www.profitbotpro.com/api/v1/api.cfm?session_key=C68367E3-AAC5-49D0-1FCEC6D96586A813&default_hashrate=15000&cryptonight_v8_hashrate=13500&cryptonight_cn7_lite_hashrate=30000&cryptonight_alloy_hashrate=7500&cryptonight_b2n_hashrate=19500&cryptonight_masari_hashrate=27000&cryptonight_heavy_hashrate=10500&cryptonight_arto_hashrate=13500&cryptonight_mox_hashrate=31500&cryptonight_freehaven_hashrate=36000&algo_select=Any&exchange_select=Any&listing_select=Listed&asic=any&db_select=Current",
+    "update_url":  "www.profitbotpro.com/api/v1/api.cfm?session_key=C68367E3-AAC5-49D0-1FCEC6D96586A813&default_hashrate=15000&cryptonight_v8_hashrate=13500&cryptonight_cn7_lite_hashrate=30000&cryptonight_alloy_hashrate=7500&cryptonight_b2n_hashrate=19500&cryptonight_masari_hashrate=27000&cryptonight_heavy_hashrate=10500&cryptonight_arto_hashrate=13500&cryptonight_mox_hashrate=31500&cryptonight_freehaven_hashrate=36000&algo_select=Any&exchange_select=Any&listing_select=Listed&asic=any&db_select=Current&volume=any",
     "enable_logging":  "yes",
     "log_age":  "7",
     "delete_cpu_txt":  "no",
