--- a/settings.conf
+++ b/settings.conf
@@ -1,7 +1,8 @@
 {
-    "version":  "6.03.00",
+    "version":  "6.04.00",
     "path":  "C:\\Profitbot_Pro",
     "rig_name": "",
+    "api_key": "A0CF8D88-045B-D9D0-2B9EDB70822B4BB9-21",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
