removed test api key

--- a/settings.conf
+++ b/settings.conf
@@ -2,7 +2,7 @@
     "version":  "6.04.00",
     "path":  "C:\\Profitbot_Pro",
     "rig_name": "",
-    "api_key": "A0CF8D88-045B-D9D0-2B9EDB70822B4BB9-21",
+    "api_key": "",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
