--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -51,7 +51,7 @@
                  ],
     "mining_params":  [
                           {
-                              "symbol":  "ZL",
+                              "symbol":  "ZLS",
                               "software":  "xmr-stak",
                               "static_param":  "2",
                               "algo":  "cryptonight_v7",
