personal mining change

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -47,7 +47,9 @@
                      "BTOR",
                      "CPA",
                      "XCY",
-                     "ZLS"
+                     "ZLS",
+                     "LMO",
+                     "ARMS"
                  ],
     "mining_params":  [
                           {
