update ver, repackage, add srb cache clear option

--- a/settings.conf
+++ b/settings.conf
@@ -1,8 +1,6 @@
 {
-    "version":  "6.04.00",
+    "version":  "6.05.00",
     "path":  "C:\\Profitbot_Pro",
-    "rig_name": "",
-    "api_key": "",
     "static_mode":  "no",
     "update_check":  "yes",
     "allow_automatic_updates":  "yes",
@@ -18,5 +16,8 @@
     "enable_coin_data": "yes",
     "mine_cpu" : "yes",
     "mine_amd" : "yes",
-    "mine_nvidia" : "yes"
+    "mine_nvidia" : "yes",
+    "rig_name": "",
+    "api_key": "",
+    "clear_srb_cache": "no"
 }
