--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 {
-    "version":  "6.05.00",
+    "version":  "6.06.00",
     "path":  "C:\\Profitbot_Pro",
     "static_mode":  "no",
     "update_check":  "yes",
@@ -19,5 +19,7 @@
     "mine_nvidia" : "yes",
     "rig_name": "",
     "api_key": "",
-    "clear_srb_cache": "no"
+    "clear_srb_cache": "no",
+    "jce_miner_version": "64",
+    "jce_miner_threads": "2"
 }
