changed software option to default

--- a/coin_settings.conf
+++ b/coin_settings.conf
@@ -439,7 +439,7 @@
                           },
                           {
                               "symbol":  "LMO",
-                              "software":  "jce_cn_cpu_miner64",
+                              "software":  "xmr-stak",
                               "static_param":  "2",
                               "algo":  "cryptonight_lite_v7",
                               "pool":  "crypto9coin.cf:30086",
