--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 {
-    "version":  "6.10.00",
+    "version":  "6.11.00",
     "path":  "C:\\Profitbot_Pro",
     "static_mode":  "no",
     "update_check":  "yes",
@@ -11,7 +11,7 @@
     "mining_timer":  "20",
     "sleep_seconds":  "60",
     "voice":  "yes",
-    "stop_worker_delay":  "5",
+    "stop_worker_delay":  "10",
     "enable_coin_data": "yes",
     "mine_cpu" : "yes",
     "mine_amd" : "yes",
@@ -19,5 +19,7 @@
     "rig_name": "",
     "api_key": "",
     "clear_srb_cache": "no",
-    "jce_miner_threads": "2"
+    "jce_miner_threads": "2",
+    "enable_set_gpu_clocks": "yes",
+    "file_set_gpu_clocks": "set_gpu_clock.bat"
 }
