added tracking of stalled or zero accepts

--- a/settings.conf
+++ b/settings.conf
@@ -21,5 +21,6 @@
     "clear_srb_cache": "no",
     "jce_miner_threads": "2",
     "enable_set_gpu_clocks": "yes",
-    "file_set_gpu_clocks": "set_gpu_clock.bat"
+    "file_set_gpu_clocks": "set_gpu_clock.bat",
+    "minutes_no_accepts": "5"
 }
